--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="icon" href="/memepool/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/memepool/_app/immutable/entry/start.DYD-4nxn.js">
-		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/entry.KQE7TJT5.js">
+		<link rel="modulepreload" href="/memepool/_app/immutable/entry/start.Cds3tcUh.js">
+		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/entry.CR8d8-wr.js">
 		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/runtime.BwYEukYZ.js">
-		<link rel="modulepreload" href="/memepool/_app/immutable/entry/app.B_5wBi0B.js">
+		<link rel="modulepreload" href="/memepool/_app/immutable/entry/app.CGcXKuj5.js">
 		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/render.CBrvtvp4.js">
 		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/disclose-version.CTM61bSQ.js">
 		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/index-client.CS0HtPQb.js">
@@ -18,7 +18,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ru7exf = {
+					__sveltekit_1sl992y = {
 						base: "/memepool",
 						assets: "/memepool"
 					};
@@ -26,8 +26,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/memepool/_app/immutable/entry/start.DYD-4nxn.js"),
-						import("/memepool/_app/immutable/entry/app.B_5wBi0B.js")
+						import("/memepool/_app/immutable/entry/start.Cds3tcUh.js"),
+						import("/memepool/_app/immutable/entry/app.CGcXKuj5.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
