--- a/index.html
+++ b/index.html
@@ -2,32 +2,32 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/memepool/favicon.png" />
+		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/memepool/_app/immutable/entry/start.Cds3tcUh.js">
-		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/entry.CR8d8-wr.js">
-		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/runtime.BwYEukYZ.js">
-		<link rel="modulepreload" href="/memepool/_app/immutable/entry/app.CGcXKuj5.js">
-		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/render.CBrvtvp4.js">
-		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/disclose-version.CTM61bSQ.js">
-		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/index-client.CS0HtPQb.js">
-		<link rel="modulepreload" href="/memepool/_app/immutable/chunks/store.FTgRTSK7.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CKHOmlTG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BEllu2Hd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BwYEukYZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BY4hM23Y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.CBrvtvp4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CTM61bSQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.CS0HtPQb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/store.FTgRTSK7.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1sl992y = {
-						base: "/memepool",
+					__sveltekit_pbbfsv = {
+						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/memepool"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/memepool/_app/immutable/entry/start.Cds3tcUh.js"),
-						import("/memepool/_app/immutable/entry/app.CGcXKuj5.js")
+						import("./_app/immutable/entry/start.CKHOmlTG.js"),
+						import("./_app/immutable/entry/app.BY4hM23Y.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
